--- a/vignettes/Child_RMDs/_Reworked_First_Bit.Rmd
+++ b/vignettes/Child_RMDs/_Reworked_First_Bit.Rmd
@@ -19,7 +19,7 @@ library(magrittr)
 ```
 
 ```{r}
-get_significant_covars <- function(mdls_with_covars_smry_tb,
+get_signft_covars <- function(mdls_with_covars_smry_tb,
                                    covar_var_nms_chr){
   signif_vars_chr <- mdls_with_covars_smry_tb$Significant %>% purrr::map(~strsplit(.x, " ")) %>% purrr::flatten() %>% purrr::flatten_chr() %>% unique()
 signt_covars_chr <- covar_var_nms_chr[covar_var_nms_chr %in% signif_vars_chr]
@@ -34,7 +34,7 @@ make_folds_ls <- function(data_tb,
                                  returnTrain = FALSE)
   return(folds_ls)
                           }
-make_one_predr_mdl <- function(data_tb,
+make_mdl <- function(data_tb,
                                dep_var_nm_1L_chr = "aqol6d_total_w",
                                tfmn_1L_chr = "NTF",
                                predr_var_nm_1L_chr,
@@ -120,7 +120,7 @@ make_predn_ds_with_one_predr <- function(mdl,
   predn_ds_tb <- predn_ds_tb %>% dplyr::mutate(!!rlang::sym(dep_var_nm_1L_chr) := predict(mdl, newdata = predn_ds_tb, type = pred_type_1L_chr) %>% calculate_dep_var_tfmn(tfmn_1L_chr = tfmn_1L_chr, tfmn_is_outp_1L_lgl = T))
   return(predn_ds_tb)
 }
-make_smry_of_one_predr_mdl <- function(data_tb,
+make_smry_of_mdl <- function(data_tb,
                                        mdl,
                                        n_folds_1L_int = 10,
                                        dep_var_nm_1L_chr = "aqol6d_total_w",
@@ -146,7 +146,7 @@ make_smry_of_one_predr_mdl <- function(data_tb,
                               n_folds_1L_int = n_folds_1L_int)
       smry_of_one_predr_mdl_tb <- purrr::map_dfr(folds_ls,
                ~ {
-                   mdl <- make_one_predr_mdl(data_tb,
+                   mdl <- make_mdl(data_tb,
                                dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                                start_1L_chr = start_1L_chr,
                                tfmn_1L_chr = tfmn_1L_chr,
@@ -176,7 +176,7 @@ plot_auto_lm <- function(mdl, # Requires ggfortify
                          label_size_1L_int = 3){
  plt <- ggplot2::autoplot(mdl,which = which_dbl, ncol = ncol_1L_int, label.size = label_size_1L_int)
 if(6 %in% which_dbl)
-  plt[which(which_dbl==6)] <- plt[which(which_dbl==6)] + ggtitle("Cooks vs Leverage") 
+  plt[which(which_dbl==6)] <- plt[which(which_dbl==6)] + ggtitle("Cook's vs Leverage") 
 plt
 }
 plot_lnr_cmprsn <- function(data_tb,
@@ -194,7 +194,7 @@ plot_lnr_cmprsn <- function(data_tb,
   ggplot2::geom_line(data = predn_ds_tb, ggplot2::aes(x = !!rlang::sym(predr_var_nm_1L_chr), y = !!rlang::sym(dep_var_nm_1L_chr)),col="red")  +
   ggplot2::theme_bw() + ggplot2::labs(x= predr_var_desc_1L_chr, y= dep_var_desc_1L_chr)
 }
-plot_sctr_lnr_cmprsn <- function(tfd_data_tb,
+plot_lnr_cmprsn_sctr_plt <- function(tfd_data_tb,
                                  dep_var_nm_1L_chr = "aqol6d_total_w",
                                  predd_val_var_nm_1L_chr = "Predicted"){
   tfd_data_tb %>%
@@ -247,12 +247,12 @@ transform_ds_for_mdlng <- function(data_tb,
 transform_ds_for_tstng <- function(data_tb,
                                    dep_var_nm_1L_chr = "aqol6d_total_w",
                                    dep_var_max_val_1L_dbl = 0.999,
-                                   main_predrs_chr = NA_character_,
+                                   candidate_predrs_chr = NA_character_,
                                    covar_var_nms_chr = NA_character_,
                                    round_var_nm_1L_chr = "round",
                                    round_val_1L_chr = "Baseline",
                                    remove_all_mssng_1L_lgl = F){
-  vars_to_keep_chr <- c(dep_var_nm_1L_chr, main_predrs_chr, covar_var_nms_chr) %>% purrr::discard(is.na)
+  vars_to_keep_chr <- c(dep_var_nm_1L_chr, candidate_predrs_chr, covar_var_nms_chr) %>% purrr::discard(is.na)
   tfd_data_tb <- data_tb %>% 
    dplyr::filter(!!rlang::sym(round_var_nm_1L_chr) == round_val_1L_chr) %>% 
    dplyr::select(!!!rlang::syms(vars_to_keep_chr)) %>% 
@@ -266,7 +266,7 @@ write_box_cox_tfmn <- function(data_tb,
                                path_to_write_to_1L_chr,
                                dep_var_nm_1L_chr = "aqol6d_total_w",
                                covar_var_nms_chr = NA_character_,
-                               fl_nm_pfx_1L_chr = "RT",
+                               fl_nm_pfx_1L_chr = "A_RT",
                                height_1L_dbl = 6,
                                width_1L_dbl = 6,
                                start_1L_chr = NULL,
@@ -274,7 +274,7 @@ write_box_cox_tfmn <- function(data_tb,
         
   if(is.null(mdl_types_lup))
       mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
-  mdl <- make_one_predr_mdl(data_tb, 
+  mdl <- make_mdl(data_tb, 
                             dep_var_nm_1L_chr = dep_var_nm_1L_chr, 
                             predr_var_nm_1L_chr = predr_var_nm_1L_chr,
                             covar_var_nms_chr = covar_var_nms_chr,
@@ -288,33 +288,33 @@ write_box_cox_tfmn <- function(data_tb,
                                             "_",
                                             predr_var_nm_1L_chr,
                                             "_",
-                                            "boxcox"),
+                                            "BOXCOX"),
                      height_1L_dbl = height_1L_dbl,
                      width_1L_dbl = width_1L_dbl)
   return(path_to_plot_1L_chr)
   
 }
-write_mdl_sngl_predrs_outps <- function(data_tb,
+write_mdl_type_multi_outps <- function(data_tb,
                                        n_folds_1L_int = 10,
-                                       predr_var_nm_chr,
+                                       predrs_var_nms_chr,
                                        covar_var_nms_chr = NA_character_,
                                        start_1L_chr = NULL,
                                        mdl_type_1L_chr,
                                        dep_var_nm_1L_chr = "aqol6d_total_w",
                                        path_to_write_to_1L_chr,
                                        mdl_types_lup = NULL,
-                                       fl_nm_pfx_1L_chr = "ind_predr",
+                                       fl_nm_pfx_1L_chr = "C_PREDR",
                                        plt_idcs_int = c(3,5)){
     if(is.null(mdl_types_lup))
       mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
-  smry_of_mdl_sngl_predrs_tb <- purrr::map_dfr(predr_var_nm_chr,
+  smry_of_mdl_sngl_predrs_tb <- purrr::map_dfr(predrs_var_nms_chr,
                ~ {
                  tfmn_1L_chr <- ready4fun::get_from_lup_obj(mdl_types_lup, 
                                              match_var_nm_1L_chr = "short_name_chr",
                                              match_value_xx = mdl_type_1L_chr,
                                              target_var_nm_1L_chr = "tfmn_chr",
                                              evaluate_lgl = F)
-                 write_one_predr_mdl_outp(data_tb,
+                 mdl_smry_tb <- write_mdl_type_sngl_outps(data_tb,
                                           n_folds_1L_int = n_folds_1L_int,
                                           dep_var_nm_1L_chr  = dep_var_nm_1L_chr , 
                                           tfmn_1L_chr = tfmn_1L_chr,
@@ -329,31 +329,38 @@ write_mdl_sngl_predrs_outps <- function(data_tb,
                                           mdl_fl_nm_1L_chr = paste0(fl_nm_pfx_1L_chr,
                                                                     "_",
                                                    .x,
-                                                   "_MDL"
+                                                   "_",
+                                                   mdl_type_1L_chr#"_MDL"
                                                    ),
-                                          plt_idcs_int = plt_idcs_int) %>%
+                                          plt_idcs_int = plt_idcs_int) 
+                 if(!is.null(n_folds_1L_int)){
+                   mdl_smry_tb <- mdl_smry_tb %>%
                    dplyr::select((-Model)) %>%
                    dplyr::mutate(Predictor = .x) %>%
                    dplyr::select(Predictor, dplyr::everything())
+                 }
+                 mdl_smry_tb
                })
-  smry_of_mdl_sngl_predrs_tb <- smry_of_mdl_sngl_predrs_tb %>%
+  if(!is.null(n_folds_1L_int)){
+      smry_of_mdl_sngl_predrs_tb <- smry_of_mdl_sngl_predrs_tb %>%
     dplyr::arrange(dplyr::desc(RsquaredP))
+  }
   return(smry_of_mdl_sngl_predrs_tb)
   
 }
-write_mdls_with_covars <- function(data_tb,
-                                   predr_var_nm_chr,
+write_mdl_type_covars_mdls <- function(data_tb,
+                                   predrs_var_nms_chr,
                                    covar_var_nms_chr,
                                    mdl_type_1L_chr,
                                    path_to_write_to_1L_chr,
-                                   fl_nm_pfx_1L_chr = "CT",
+                                   fl_nm_pfx_1L_chr = "D_CT",
                                    mdl_types_lup = NULL,
                                    start_1L_chr = NA_character_){
       if(is.null(mdl_types_lup))
         mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
-  smry_of_mdls_with_covars_tb <- purrr::map_dfr(predr_var_nm_chr,
+  smry_of_mdls_with_covars_tb <- purrr::map_dfr(predrs_var_nms_chr,
                                                 ~{
-                 mdl <- make_one_predr_mdl(data_tb,
+                 mdl <- make_mdl(data_tb,
                    predr_var_nm_1L_chr = .x,
                    covar_var_nms_chr = covar_var_nms_chr,
                    tfmn_1L_chr = "NTF",
@@ -380,7 +387,7 @@ write_mdls_with_covars <- function(data_tb,
   return(smry_of_mdls_with_covars_tb)
   
 }
-write_one_predr_mdl_plts <- function(data_tb, 
+write_mdl_plts <- function(data_tb, 
                                      mdl,
                                      mdl_fl_nm_1L_chr = "OLS_NTF",
                                      dep_var_nm_1L_chr = "aqol6d_total_w",
@@ -403,13 +410,17 @@ write_one_predr_mdl_plts <- function(data_tb,
                                               pred_type_1L_chr = pred_type_1L_chr,
                                               tfmn_for_bnml_1L_lgl = tfmn_for_bnml_1L_lgl,
                                               family_1L_chr = family_1L_chr) 
-  predn_ds_tb <- make_predn_ds_with_one_predr(mdl, 
+  if(1 %in% plt_idcs_int){
+      predn_ds_tb <- make_predn_ds_with_one_predr(mdl, 
                                               dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                                               tfmn_1L_chr = tfmn_1L_chr,
                                               predr_var_nm_1L_chr = predr_var_nm_1L_chr, 
                                               predr_vals_dbl = predr_vals_dbl,
                                               pred_type_1L_chr = pred_type_1L_chr)
-  purrr::pwalk(list(plt_fn_ls = list(plot_lnr_cmprsn, plot_auto_lm, plot_obsd_predd_dnst, plot_obsd_predd_dnst, plot_sctr_lnr_cmprsn)[plt_idcs_int],
+  }else{
+    predn_ds_tb <- NULL
+  }
+  purrr::pwalk(list(plt_fn_ls = list(plot_lnr_cmprsn, plot_auto_lm, plot_obsd_predd_dnst, plot_obsd_predd_dnst, plot_lnr_cmprsn_sctr_plt)[plt_idcs_int],
                     fn_args_ls_ls = list(list(data_tb = data_tb,
                                         predn_ds_tb = predn_ds_tb,
                                         predr_var_nm_1L_chr = predr_var_nm_1L_chr,
@@ -427,7 +438,7 @@ write_one_predr_mdl_plts <- function(data_tb,
                                                                                       family_1L_chr = family_1L_chr),
                                            predd_val_var_nm_1L_chr = "Simulated"),
                                       list(tfd_data_tb = tfd_data_tb))[plt_idcs_int],
-                 plt_nm_sfx_chr = c("_lnr_cmprsn","_auto_plt","_pred_dnsty","_simd_dnsty","_pred_sctr")[plt_idcs_int],
+                 plt_nm_sfx_chr = c("_LNR_CMPRSN","_AUTOPLT","_PRED_DNSTY","_SIM_DNSTY","_PRED_SCTR")[plt_idcs_int],
                  size_ls = list(c(6,6),c(4,7),c(6,6),c(6,6),c(6,6))[plt_idcs_int]), 
             ~ write_brm_mdl_plt_fl(plt_fn = ..1,
                      fn_args_ls = ..2,
@@ -441,7 +452,7 @@ write_one_predr_mdl_plts <- function(data_tb,
                      width_1L_dbl = ..4[2]))
   
 }
-write_one_predr_mdl_outp <- function(data_tb,
+write_mdl_type_sngl_outps <- function(data_tb,
                                      n_folds_1L_int = 10,
                                      dep_var_nm_1L_chr = "aqol6d_total_w",
                                      start_1L_chr = NULL,
@@ -482,7 +493,7 @@ write_one_predr_mdl_outp <- function(data_tb,
                                                    evaluate_lgl = F)
   data_tb <- data_tb %>% dplyr::mutate(!!rlang::sym(transform_dep_var_nm(dep_var_nm_1L_chr,
                                                                          tfmn_1L_chr = tfmn_1L_chr)) := !!rlang::sym(dep_var_nm_1L_chr) %>% calculate_dep_var_tfmn())
-  mdl <- make_one_predr_mdl(data_tb,
+  mdl <- make_mdl(data_tb,
                             dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                             tfmn_1L_chr = tfmn_1L_chr,
                             predr_var_nm_1L_chr = predr_var_nm_1L_chr, 
@@ -491,7 +502,7 @@ write_one_predr_mdl_outp <- function(data_tb,
                             mdl_types_lup = mdl_types_lup,
                             control_1L_chr = control_1L_chr,
                             start_1L_chr = start_1L_chr)
-  write_one_predr_mdl_plts(data_tb,
+  write_mdl_plts(data_tb,
                          mdl = mdl,
                          mdl_fl_nm_1L_chr = mdl_fl_nm_1L_chr,
                          dep_var_nm_1L_chr = dep_var_nm_1L_chr,
@@ -506,7 +517,7 @@ write_one_predr_mdl_outp <- function(data_tb,
                          family_1L_chr = family_1L_chr,
                          plt_idcs_int = plt_idcs_int)
   if(!is.null(n_folds_1L_int)) {
-      smry_of_one_predr_mdl_tb <- make_smry_of_one_predr_mdl(data_tb,
+      smry_of_one_predr_mdl_tb <- make_smry_of_mdl(data_tb,
                                                          mdl = mdl,
                                                          n_folds_1L_int = n_folds_1L_int,
                                                          dep_var_nm_1L_chr = dep_var_nm_1L_chr,
@@ -524,16 +535,16 @@ write_one_predr_mdl_outp <- function(data_tb,
 write_predr_cmprsn_outps <- function(data_tb,
                                      path_to_write_to_1L_chr,
                                      dep_var_nm_1L_chr = "aqol6d_total_w",
-                                     main_predrs_chr,
+                                     candidate_predrs_chr,
                                      max_nbr_of_boruta_mdl_runs_int = 300L){
-  if(length(main_predrs_chr)>1){
-    covar_var_nms_chr <- main_predrs_chr[2:length(main_predrs_chr)]
+  if(length(candidate_predrs_chr)>1){
+    covar_var_nms_chr <- candidate_predrs_chr[2:length(candidate_predrs_chr)]
   }else{
     covar_var_nms_chr <- NA_character_
   }
     data_tb <- transform_ds_for_mdlng(data_tb,
                                         dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-                                        predr_var_nm_1L_chr = main_predrs_chr[1],
+                                        predr_var_nm_1L_chr = candidate_predrs_chr[1],
                                       covar_var_nms_chr = covar_var_nms_chr)
 rf_mdl <- randomForest::randomForest(as.formula(paste0(dep_var_nm_1L_chr," ~ .")), data=data_tb, importance = TRUE)
 boruta_mdl <- Boruta::Boruta(as.formula(paste0(dep_var_nm_1L_chr," ~ .")), data = data_tb, maxRuns = max_nbr_of_boruta_mdl_runs_int)
@@ -546,12 +557,12 @@ purrr::pwalk(list(fn_ls = list(randomForest::varImpPlot,plot),
                                            las=2, 
                                            xlab="", 
                                            main="")),
-                plt_nm_sfx_chr = c("_rf_var_imp","_boruta_var_imp"),
+                plt_nm_sfx_chr = c("_RF_VAR_IMP","_BORUTA_VAR_IMP"),
                  size_ls = list(c(6,6),c(4,6))),
             ~ write_brm_mdl_plt_fl(plt_fn = ..1,
                      fn_args_ls = ..2,
                      path_to_write_to_1L_chr = path_to_write_to_1L_chr,
-                     plt_nm_1L_chr = paste0("pred_cmprsn",
+                     plt_nm_1L_chr = paste0("B_PRED_CMPRSN",
                                             ..3),
                      height_1L_dbl = ..4[1],
                      width_1L_dbl = ..4[2]))
@@ -561,7 +572,7 @@ confirmed_predrs_tb <- rf_mdl$importance %>% tibble::as_tibble(rownames = "predr
   dplyr::filter(predr_chr %in% confirmed_predrs_chr)
 return(confirmed_predrs_tb)
 }
-write_sngl_predr_mdls_outps <- function(data_tb,
+write_sngl_predr_multi_mdls_outps <- function(data_tb,
                                         mdl_types_chr,
                                         predr_var_nm_1L_chr,
                                         predr_var_desc_1L_chr,
@@ -572,7 +583,7 @@ write_sngl_predr_mdls_outps <- function(data_tb,
                                         dep_var_nm_1L_chr = "aqol6d_total_w",
                                         n_folds_1L_int = 10,
                                         mdl_types_lup = NULL,
-                                        fl_nm_pfx_1L_chr = "RT_",
+                                        fl_nm_pfx_1L_chr = "A_RT_",
                                         plt_idcs_int = NA_integer_){
     if(is.null(mdl_types_lup))
       mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
@@ -587,7 +598,7 @@ write_sngl_predr_mdls_outps <- function(data_tb,
                                              match_value_xx = .x,
                                              target_var_nm_1L_chr = "tfmn_chr",
                                              evaluate_lgl = F)
-                 write_one_predr_mdl_outp(data_tb,
+                 write_mdl_type_sngl_outps(data_tb,
                                           n_folds_1L_int = n_folds_1L_int,
                                           dep_var_nm_1L_chr  = dep_var_nm_1L_chr,
                                           start_1L_chr = start_1L_chr,
@@ -602,8 +613,7 @@ write_sngl_predr_mdls_outps <- function(data_tb,
                                           mdl_fl_nm_1L_chr = paste0(fl_nm_pfx_1L_chr,
                                                    predr_var_nm_1L_chr,
                                                    "_",
-                                                   .x,
-                                                   "_MDL"
+                                                   .x#,"_MDL"
                                                    ),
                                           plt_idcs_int = plt_idcs_int)
                }) 
@@ -667,7 +677,7 @@ path_to_write_to_1L_chr <- paste0(path_to_write_fls_to_1L_chr,
                                                       "/",
                                                       dir_nm_1L_chr)
 dep_var_nm_1L_chr <- "aqol6d_total_w"
-main_predrs_chr <- c("BADS","GAD7","K6","OASIS","PHQ9","SCARED")
+candidate_predrs_chr <- c("BADS","GAD7","K6","OASIS","PHQ9","SCARED")
 covar_var_nms_chr <- c("d_sex_birth_s", "SOFAS", "c_p_diag_s", "c_clinical_staging_s", "d_age",  "d_sexual_ori_s", "d_country_bir_s", "d_relation_s", "d_studying_working")
 n_folds_1L_int <- 10L
 round_var_nm_1L_chr <- "round"
@@ -678,7 +688,7 @@ prefd_covars_chr <- "SOFAS"
 
 ```{r}
 data_tb <- transform_raw_aqol_tb_to_aqol6d_tb(readRDS(params$path_to_data_1L_chr))
-bl_tb <- transform_ds_for_tstng(data_tb, dep_var_nm_1L_chr = dep_var_nm_1L_chr, main_predrs_chr = main_predrs_chr, dep_var_max_val_1L_dbl = 0.999, round_val_1L_chr = "Baseline")
+bl_tb <- transform_ds_for_tstng(data_tb, dep_var_nm_1L_chr = dep_var_nm_1L_chr, candidate_predrs_chr = candidate_predrs_chr, dep_var_max_val_1L_dbl = 0.999, round_val_1L_chr = "Baseline")
 ```
 
 ```{r}
@@ -689,7 +699,7 @@ bl_tb <- transform_ds_for_tstng(data_tb, dep_var_nm_1L_chr = dep_var_nm_1L_chr, 
 ```
 
 ```{r}
-smry_of_sngl_predr_mdls_tb <- write_sngl_predr_mdls_outps(data_tb = bl_tb,
+smry_of_sngl_predr_mdls_tb <- write_sngl_predr_multi_mdls_outps(data_tb = bl_tb,
                                                           n_folds_1L_int = n_folds_1L_int,
                                                           mdl_types_chr = c("OLS_NTF","OLS_LOG", "OLS_LOGIT", "OLS_LOGLOG", "OLS_CLL", "GLM_GSN_LOG", "GLM_BNL_LOG", "GLM_BNL_LGT", "GLM_BNL_CLL", "BET_LOG","BET_LGT", "BET_CLL"),
                                                           dep_var_nm_1L_chr = "aqol6d_total_w",
@@ -704,276 +714,52 @@ smry_of_sngl_predr_mdls_tb <- write_sngl_predr_mdls_outps(data_tb = bl_tb,
 predr_cmprsns_tb <- write_predr_cmprsn_outps(data_tb = bl_tb,
                                              path_to_write_to_1L_chr = path_to_write_to_1L_chr,
                                              dep_var_nm_1L_chr = "aqol6d_total_w",
-                                             main_predrs_chr = main_predrs_chr,
+                                             candidate_predrs_chr = candidate_predrs_chr,
                                              max_nbr_of_boruta_mdl_runs_int = 300L)
 
 ```
 
-## Individual predictors
-
 ```{r}
-smry_of_mdl_sngl_predrs_tb <- write_mdl_sngl_predrs_outps(data_tb = bl_tb,
+smry_of_mdl_sngl_predrs_tb <- write_mdl_type_multi_outps(data_tb = bl_tb,
                             n_folds_1L_int = n_folds_1L_int,
-                            predr_var_nm_chr = predr_cmprsns_tb$predr_chr,
+                            predrs_var_nms_chr = predr_cmprsns_tb$predr_chr,
                             mdl_type_1L_chr = "GLM_GSN_LOG",
                             dep_var_nm_1L_chr = "aqol6d_total_w",
                             path_to_write_to_1L_chr = path_to_write_to_1L_chr,
                             mdl_types_lup = mdl_types_lup)
 ```
 
-## Additional confounding variables
-
 ```{r}
-bl_tb <- data_tb %>% transform_ds_for_tstng(main_predrs_chr = main_predrs_chr, 
+bl_tb <- data_tb %>% transform_ds_for_tstng(candidate_predrs_chr = candidate_predrs_chr, 
                                    covar_var_nms_chr = covar_var_nms_chr,
                                    remove_all_mssng_1L_lgl = T,
                                    round_val_1L_chr = "Baseline")
-mdls_with_covars_smry_tb <- write_mdls_with_covars(bl_tb,
-                       predr_var_nm_chr = main_predrs_chr,
+mdls_with_covars_smry_tb <- write_mdl_type_covars_mdls(bl_tb,
+                       predrs_var_nms_chr = candidate_predrs_chr,
                        covar_var_nms_chr = covar_var_nms_chr,
                        mdl_type_1L_chr = prefd_mdl_types_chr[2],
                        path_to_write_to_1L_chr = path_to_write_to_1L_chr,
                        fl_nm_pfx_1L_chr = "CT",
                        mdl_types_lup = mdl_types_lup)
 
-signt_covars_chr <- get_significant_covars(mdls_with_covars_smry_tb = mdls_with_covars_smry_tb,
+signt_covars_chr <- get_signft_covars(mdls_with_covars_smry_tb = mdls_with_covars_smry_tb,
                        covar_var_nms_chr)
 if(is.na(prefd_covars_chr))
   prefd_covars_chr <- signt_covars_chr
 
 ```
 
-
-## Checking 
-
 ```{r}
-smry_of_mdl_sngl_predrs_tb <- write_mdl_sngl_predrs_outps(data_tb = bl_tb,
+smry_of_mdl_sngl_predrs_tb <- write_mdl_type_multi_outps(data_tb = bl_tb,
                             n_folds_1L_int = NULL,
                             start_1L_chr = NA_character_,
-                            predr_var_nm_chr = predr_cmprsns_tb$predr_chr,
+                            predrs_var_nms_chr = predr_cmprsns_tb$predr_chr,
                             covar_var_nms_chr = covar_var_nms_chr,
                             mdl_type_1L_chr = prefd_mdl_types_chr[2],
                             dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                             path_to_write_to_1L_chr = path_to_write_to_1L_chr,
                             mdl_types_lup = mdl_types_lup,
-                            fl_nm_pfx_1L_chr = "CK_CV")
+                            fl_nm_pfx_1L_chr = "E_CK_CV")
 ```
 
 
-### PHQ9 
-```{r}
-baseline<-Baseline_follow[Baseline_follow$round=="Baseline",] %>% 
-   dplyr::select(aqol6d_total_w ,PHQ9, SOFAS) %>% 
-   na.omit()
-
-fit = glm(aqol6d_total_w ~ PHQ9 + SOFAS  , data = baseline,family=gaussian(log))
-
-summary(fit)
-baseline %>% 
-    mutate(Predicted=simulate(fit)$sim_1, 
-         Original=aqol6d_total_w) %>% 
-    gather(variable, value, Predicted, Original) %>%
-    ggplot(aes(x = value, fill = variable)) +
-    geom_bkde(alpha=0.5) +
-    geom_rug() +
-    scale_fill_viridis( discrete = TRUE) +
-    theme_bw() +
-    theme(legend.position="bottom") +
-    labs( x="AQoL-6D utility score",fill="") 
-
-baseline %>% 
-     mutate(Predicted=predict(fit,type="response"),  
-         Original=aqol6d_total_w) %>% 
-  ggplot(aes(x = Original, y=Predicted)) +
-  geom_point() + 
-  geom_smooth(method = "loess", size = 1.5) +
-  theme_bw() +
-  geom_abline(intercept = 0, slope = 1, color="red", 
-                 linetype="dashed", size=1.5) +
-  xlim(0, 1) + ylim(0, 1) 
-
-
-```
-
-
-### BADS 
-```{r}
-baseline<-Baseline_follow[Baseline_follow$round=="Baseline",] %>% 
-   dplyr::select(aqol6d_total_w ,BADS, SOFAS) %>% 
-   na.omit()
-
-fit = glm(aqol6d_total_w ~ BADS + SOFAS  , data = baseline,family=gaussian(log))
-
-summary(fit)
-baseline %>% 
-    mutate(Predicted=simulate(fit)$sim_1, 
-         Original=aqol6d_total_w) %>% 
-    gather(variable, value, Predicted, Original) %>%
-    ggplot(aes(x = value, fill = variable)) +
-    geom_bkde(alpha=0.5) +
-    geom_rug() +
-    scale_fill_viridis( discrete = TRUE) +
-    theme_bw() +
-    theme(legend.position="bottom") +
-    labs( x="AQoL-6D utility score",fill="") 
-
-baseline %>% 
-     mutate(Predicted=predict(fit,type="response"),  
-         Original=aqol6d_total_w) %>% 
-  ggplot(aes(x = Original, y=Predicted)) +
-  geom_point() + 
-  geom_smooth(method = "loess", size = 1.5) +
-  theme_bw() +
-  geom_abline(intercept = 0, slope = 1, color="red", 
-                 linetype="dashed", size=1.5) +
-  xlim(0, 1) + ylim(0, 1) 
-
-
-```
-
-
-
-### GAD7 
-```{r}
-baseline<-Baseline_follow[Baseline_follow$round=="Baseline",] %>% 
-   dplyr::select(aqol6d_total_w ,GAD7, SOFAS) %>% 
-   na.omit()
-
-fit = glm(aqol6d_total_w ~ GAD7 + SOFAS  , data = baseline,family=gaussian(log))
-
-summary(fit)
-baseline %>% 
-    mutate(Predicted=simulate(fit)$sim_1, 
-         Original=aqol6d_total_w) %>% 
-    gather(variable, value, Predicted, Original) %>%
-    ggplot(aes(x = value, fill = variable)) +
-    geom_bkde(alpha=0.5) +
-    geom_rug() +
-    scale_fill_viridis( discrete = TRUE) +
-    theme_bw() +
-    theme(legend.position="bottom") +
-    labs( x="AQoL-6D utility score",fill="") 
-
-baseline %>% 
-     mutate(Predicted=predict(fit,type="response"),  
-         Original=aqol6d_total_w) %>% 
-  ggplot(aes(x = Original, y=Predicted)) +
-  geom_point() + 
-  geom_smooth(method = "loess", size = 1.5) +
-  theme_bw() +
-  geom_abline(intercept = 0, slope = 1, color="red", 
-                 linetype="dashed", size=1.5) +
-  xlim(0, 1) + ylim(0, 1) 
-
-
-```
-
-
-### OASIS  
-```{r}
-baseline<-Baseline_follow[Baseline_follow$round=="Baseline",] %>% 
-   dplyr::select(aqol6d_total_w ,OASIS, SOFAS) %>% 
-   na.omit()
-
-fit = glm(aqol6d_total_w ~ OASIS + SOFAS  , data = baseline,family=gaussian(log))
-
-summary(fit)
-baseline %>% 
-    mutate(Predicted=simulate(fit)$sim_1, 
-         Original=aqol6d_total_w) %>% 
-    gather(variable, value, Predicted, Original) %>%
-    ggplot(aes(x = value, fill = variable)) +
-    geom_bkde(alpha=0.5) +
-    geom_rug() +
-    scale_fill_viridis( discrete = TRUE) +
-    theme_bw() +
-    theme(legend.position="bottom") +
-    labs( x="AQoL-6D utility score",fill="") 
-
-baseline %>% 
-     mutate(Predicted=predict(fit,type="response"),  
-         Original=aqol6d_total_w) %>% 
-  ggplot(aes(x = Original, y=Predicted)) +
-  geom_point() + 
-  geom_smooth(method = "loess", size = 1.5) +
-  theme_bw() +
-  geom_abline(intercept = 0, slope = 1, color="red", 
-                 linetype="dashed", size=1.5) +
-  xlim(0, 1) + ylim(0, 1) 
-
-
-```
-
-
-
-### SCARED 
-```{r}
-baseline<-Baseline_follow[Baseline_follow$round=="Baseline",] %>% 
-   dplyr::select(aqol6d_total_w ,SCARED, SOFAS) %>% 
-   na.omit()
-
-fit = glm(aqol6d_total_w ~ SCARED + SOFAS  , data = baseline,family=gaussian(log))
-
-summary(fit)
-baseline %>% 
-    mutate(Predicted=simulate(fit)$sim_1, 
-         Original=aqol6d_total_w) %>% 
-    gather(variable, value, Predicted, Original) %>%
-    ggplot(aes(x = value, fill = variable)) +
-    geom_bkde(alpha=0.5) +
-    geom_rug() +
-    scale_fill_viridis( discrete = TRUE) +
-    theme_bw() +
-    theme(legend.position="bottom") +
-    labs( x="AQoL-6D utility score",fill="") 
-
-baseline %>% 
-     mutate(Predicted=predict(fit,type="response"),  
-         Original=aqol6d_total_w) %>% 
-  ggplot(aes(x = Original, y=Predicted)) +
-  geom_point() + 
-  geom_smooth(method = "loess", size = 1.5) +
-  theme_bw() +
-  geom_abline(intercept = 0, slope = 1, color="red", 
-                 linetype="dashed", size=1.5) +
-  xlim(0, 1) + ylim(0, 1) 
-
-
-```
-
-
-
-### K6 
-```{r}
-baseline<-Baseline_follow[Baseline_follow$round=="Baseline",] %>% 
-   dplyr::select(aqol6d_total_w ,K6, SOFAS) %>% 
-   na.omit()
-
-fit = glm(aqol6d_total_w ~ K6 + SOFAS  , data = baseline,family=gaussian(log))
-
-summary(fit)
-baseline %>% 
-    mutate(Predicted=simulate(fit)$sim_1, 
-         Original=aqol6d_total_w) %>% 
-    gather(variable, value, Predicted, Original) %>%
-    ggplot(aes(x = value, fill = variable)) +
-    geom_bkde(alpha=0.5) +
-    geom_rug() +
-    scale_fill_viridis( discrete = TRUE) +
-    theme_bw() +
-    theme(legend.position="bottom") +
-    labs( x="AQoL-6D utility score",fill="") 
-
-baseline %>% 
-     mutate(Predicted=predict(fit,type="response"),  
-         Original=aqol6d_total_w) %>% 
-  ggplot(aes(x = Original, y=Predicted)) +
-  geom_point() + 
-  geom_smooth(method = "loess", size = 1.5) +
-  theme_bw() +
-  geom_abline(intercept = 0, slope = 1, color="red", 
-                 linetype="dashed", size=1.5) +
-  xlim(0, 1) + ylim(0, 1) 
-
-
-```
