--- a/vignettes/_main_workflow.Rmd
+++ b/vignettes/_main_workflow.Rmd
@@ -2,6 +2,7 @@
 title: "Main Workflow"
 output: html_document
 params:
+  path_to_data_1L_chr: !r NA_character_
   path_to_write_fls_to_1L_chr: "../../../../../../Data/Project/Utility_Models"
   dir_nm_1L_chr: "One_Predr_Output"
 ---
@@ -11,8 +12,6 @@ knitr::opts_chunk$set(echo = TRUE)
 library(xtable) 
 library(FBaqol) 
 library(magrittr)
-library(ggfortify)
-
 ```
 
 ```{r}
@@ -21,12 +20,15 @@ set.seed(seed_1L_int)
 ```
 
 ```{r}
-raw_data_tb <- ready4use::ready4_dv_import_lup() %>%
-  tibble::add_case(data_repo_db_ui = "https://doi.org/10.7910/DVN/GRZRY5",
-                   file_name = "fake_pop_tb",
-                   file_type = ".csv",
-                   data_repo_file_ext = ".tab") %>%
-  ready4use::get_data()
+if(!is.na(params$path_to_data_1L_chr)){
+  raw_data_tb <- transform_raw_aqol_tb_to_aqol6d_tb(readRDS(params$path_to_data_1L_chr))
+}### ADD ELSE CALL TO PKG DATA
+
+```
+
+```{r}
+
+
 ```
 
 ```{r}
@@ -41,17 +43,18 @@ covar_var_nms_chr <- c("d_sex_birth_s", "SOFAS", "c_p_diag_s", "c_clinical_stagi
 n_folds_1L_int <- 10L
 round_var_nm_1L_chr <- "round"
 round_bl_val_1L_chr <- "Baseline"
-prefd_mdl_types_chr <- c("OLS_CLL", "GLM_GSN_LOG")
+prefd_mdl_types_chr <- c("GLM_GSN_LOG","OLS_CLL")
 prefd_covars_chr <- "SOFAS"
 id_var_nm_1L_chr <-"fkClientID"
 mdl_types_chr <- FBaqol::mdl_types_lup$short_name_chr[3:14]
+max_nbr_of_boruta_mdl_runs_int <- 300L
 ```
 
 ```{r}
 scored_data_tb <- add_adol6d_scores(raw_data_tb,
                               prefix_1L_chr =  "aqol6d_q",
                               id_var_nm_1L_chr = id_var_nm_1L_chr,
-                              wtd_aqol_var_nm_1L_chr = dep_var_nm_1L_chr) %>% transform_raw_aqol_tb_to_aqol6d_tb()
+                              wtd_aqol_var_nm_1L_chr = dep_var_nm_1L_chr) 
 ```
 
 ```{r}
@@ -59,30 +62,41 @@ bl_tb <- transform_ds_for_tstng(scored_data_tb, dep_var_nm_1L_chr = dep_var_nm_1
 ```
 
 ```{r}
+candidate_predrs_chr <- reorder_cndt_predrs_chr(candidate_predrs_chr,
+                        data_tb = bl_tb,
+                        dep_var_nm_1L_chr = dep_var_nm_1L_chr)
+predr_var_nm_1L_chr <- candidate_predrs_chr[1]
+predr_var_desc_1L_chr <- candidate_predrs_lup %>% ready4fun::get_from_lup_obj(match_value_xx = predr_var_nm_1L_chr, match_var_nm_1L_chr = "short_name_chr", target_var_nm_1L_chr = "long_name_chr", evaluate_lgl = F)
+predr_vals_dbl <- make_predr_vals(predr_var_nm_1L_chr,
+                                  candidate_predrs_lup = candidate_predrs_lup)
+
+```
+
+```{r}
 bc_plt_path_1L_chr <- write_box_cox_tfmn(data_tb = bl_tb, 
-                    predr_var_nm_1L_chr = "PHQ9", 
-                    path_to_write_to_1L_chr = path_to_write_to_1L_chr, 
-                    mdl_types_lup = mdl_types_lup) 
+                    predr_var_nm_1L_chr = predr_var_nm_1L_chr, 
+                    path_to_write_to_1L_chr = path_to_write_to_1L_chr) # ,mdl_types_lup = mdl_types_lup
 ```
 
 ```{r}
 smry_of_sngl_predr_mdls_tb <- write_sngl_predr_multi_mdls_outps(data_tb = bl_tb,
                                                           n_folds_1L_int = n_folds_1L_int,
                                                           mdl_types_chr = mdl_types_chr,
-                                                          dep_var_nm_1L_chr = "aqol6d_total_w",
-                                                          predr_var_nm_1L_chr = "PHQ9",
-                                                          predr_var_desc_1L_chr = "PHQ9 total score",
-                                                          predr_vals_dbl = 0:27, 
-                                                          path_to_write_to_1L_chr = path_to_write_to_1L_chr,
-                                                          mdl_types_lup = mdl_types_lup)
+                                                          dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                                                          predr_var_nm_1L_chr = predr_var_nm_1L_chr,
+                                                          predr_var_desc_1L_chr = predr_var_nm_1L_chr,
+                                                          predr_vals_dbl = predr_vals_dbl , 
+                                                          path_to_write_to_1L_chr = path_to_write_to_1L_chr) # ,mdl_types_lup = mdl_types_lup
+make_prefd_mdls_vec(smry_of_sngl_predr_mdls_tb,
+                    choose_from_pfx_chr = c("GLM","OLS"))
 ```
 
 ```{r}
 predr_cmprsns_tb <- write_predr_cmprsn_outps(data_tb = bl_tb,
                                              path_to_write_to_1L_chr = path_to_write_to_1L_chr,
-                                             dep_var_nm_1L_chr = "aqol6d_total_w",
+                                             dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                                              candidate_predrs_chr = candidate_predrs_chr,
-                                             max_nbr_of_boruta_mdl_runs_int = 300L)
+                                             max_nbr_of_boruta_mdl_runs_int = max_nbr_of_boruta_mdl_runs_int)
 
 ```
 
@@ -90,10 +104,9 @@ predr_cmprsns_tb <- write_predr_cmprsn_outps(data_tb = bl_tb,
 smry_of_mdl_sngl_predrs_tb <- write_mdl_type_multi_outps(data_tb = bl_tb,
                             n_folds_1L_int = n_folds_1L_int,
                             predrs_var_nms_chr = predr_cmprsns_tb$predr_chr,
-                            mdl_type_1L_chr = "GLM_GSN_LOG",
-                            dep_var_nm_1L_chr = "aqol6d_total_w",
-                            path_to_write_to_1L_chr = path_to_write_to_1L_chr,
-                            mdl_types_lup = mdl_types_lup)
+                            mdl_type_1L_chr = prefd_mdl_types_chr[1],
+                            dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                            path_to_write_to_1L_chr = path_to_write_to_1L_chr) # mdl_types_lup = mdl_types_lup
 ```
 
 ```{r}
@@ -104,18 +117,15 @@ bl_tb <- scored_data_tb %>% transform_ds_for_tstng(candidate_predrs_chr = candid
 mdls_with_covars_smry_tb <- write_mdl_type_covars_mdls(bl_tb,
                        predrs_var_nms_chr = candidate_predrs_chr,
                        covar_var_nms_chr = covar_var_nms_chr,
-                       mdl_type_1L_chr = prefd_mdl_types_chr[2],
+                       mdl_type_1L_chr = prefd_mdl_types_chr[1],
                        path_to_write_to_1L_chr = path_to_write_to_1L_chr,
-                       fl_nm_pfx_1L_chr = "CT",
-                       mdl_types_lup = mdl_types_lup)
-
+                       fl_nm_pfx_1L_chr = "CT") # ,                       mdl_types_lup = mdl_types_lup
 signt_covars_chr <- get_signft_covars(mdls_with_covars_smry_tb = mdls_with_covars_smry_tb,
                        covar_var_nms_chr)
 if(is.na(prefd_covars_chr))
   prefd_covars_chr <- signt_covars_chr
 
 ```
-
 ```{r}
 smry_of_mdl_sngl_predrs_tb <- write_mdl_type_multi_outps(data_tb = bl_tb,
                             n_folds_1L_int = NULL,
@@ -125,6 +135,6 @@ smry_of_mdl_sngl_predrs_tb <- write_mdl_type_multi_outps(data_tb = bl_tb,
                             mdl_type_1L_chr = prefd_mdl_types_chr[2],
                             dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                             path_to_write_to_1L_chr = path_to_write_to_1L_chr,
-                            mdl_types_lup = mdl_types_lup,
+                            #mdl_types_lup = mdl_types_lup,
                             fl_nm_pfx_1L_chr = "E_CK_CV")
 ```
